6.0.2
-----
1. Fix track list being cut short in desktop layout.
2. Fix storing of genre grid/list setting.
3. Fix toggling grid/list for genres with more than 100 items.

6.0.1
-----
 1. Fix static clock screensaver.
 2. Fix storing of grid/list for home screen.
 3. Fix issue with press of back button navigating home.
 4. Fix persistence of 'Newest' album sort.
 5. Fix home screen if library is empty.
 6. Fix error logged when only 1 grid row.
 7. Append 's' to decades.
 8. Add 'Random Albums/Releases', and 'Recently Updated Albums/Releases', to
    scrolled lists.
 9. Recurse favourites folders for 'Radios' - thanks to Michael Herger.
10. Fix list corruption when pinning items.
11. Enable 'Show image' hover button for home screen items.
12. Fix 'Play shuffled' not appearing for remote playlists.

6.0.0
-----
 1. Split years into decades, if 2 or more.
 2. Allow using grid for years.
 3. Slightly blur-behind popup messages.
 4. Add 'Newest' to album sorts.
 5. Add, server-side, option to use smaller grid if icon only and narrow width.
 6. Adjust display of track numbers in browse view.
 7. Allow loading of 'pinned' weblink/iframe items from custom actions.
 8. Add option to show horizontally scrollable list of new, recently played,
    most played, radios, and playlists on home screen.
 9. Add "(More)" button on search results header, if more results than shown.
10. Reduce grid size for home screen and for views with only icons.
11. Separate list/grid preference for home screen.
12. Set max width of 1000px for information in browse view.
13. Always use frosted background for queue in desktop layout when not pinned.
14. In desktop layout, always show queue above now-playing if now-playing is
    expanded - regardless of whether queue is pinned or not.
15. Add icon map for xPlay.
16. If set to combine apps and radio then categorise apps.
17. Allow using grid for genres even when genre images are disabled.